# RideSharePlanner

./: .gitignore  CMakeLists.txt  analyze_results.py  benchmark.sh  main.cpp  planner_gaso1.cpp  planner_gaso2.cpp  request.hpp  utils.hpp
backend/: server.js
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  Planner.tsx  index.css
src/: additive_tree.cpp  additive_tree.hpp  benchmark_suite.hpp  gui_visual.cpp  gui_visual.hpp  json_parsing.cpp  json_parsing.hpp  main.cpp  main_benchmark.cpp  planner_gas.cpp  planner_gas.hpp  planner_gaso1.cpp  planner_gaso1.hpp  planner_gaso2.cpp  planner_gaso2.hpp  utils.hpp  vehicle.hpp  visual.cpp
